--- a/group_vars/networkpve/all.yml
+++ b/group_vars/networkpve/all.yml
@@ -4,4 +4,7 @@ ssh_public_key: "{{ ssh_directory }}id_rsa.pub"
 ssh_key_path: "{{ ssh_directory }}id_rsa"
 ssh_port: 22
 shell: /bin/bash
+base_storage_path: "/home/shajal"
+
+ssl_cert_dir: "/etc/ssl/openssl/certs"
 
