--- a/main_playbook.yml
+++ b/main_playbook.yml
@@ -15,6 +15,8 @@
 
   roles: 
     # - install_portainer
-    - install_wireguard
+    # - install_wireguard
+    # - cloudflare_tunnel
+    - install_headscale
     # - install_pihole
 
