--- a/roles/install_wireguard/defaults/main.yml
+++ b/roles/install_wireguard/defaults/main.yml
@@ -4,7 +4,7 @@ vm_ip_address: "{{ vm_ip_address }}"
 wireguard_base_path: "{{ base_storage_path }}/wireguard"
 wireguard_nginx_config: "{{ wireguard_base_path }}/nginx"
 wireguard_port: 1111
-public_domain: "{{ public_domain }}"
+public_domain: "{{ wireguard_domain }}"
 vm_password: "{{ vm_password }}"
 
 
